crates/vexor-compiler/tests/golden/error/input/list_range.vx
let xs = []
let ys = [1,3..10]
// expected a ','
let zs = [1,2,3..10]
export Circle(10)
